bluemaemo (0.3) unstable; urgency=low


bluemaemo 0.3

	* 

bluemaemo 0.2

	* Added ability to map space key in the profiles
	* Added method to change bluetooth adapter mode
	* N810 Hardware keyboard support while in mouse profile
	* Major code refactoring - Separated all profiles
	* Added reconnect functionality
	* Added auto-connect functionality

bluemaemo 0.1

	* First release



-- Valerio Valerio <vdv100@gmail.com>  Thu, 26 Fev 12:00:35