@@ -1,43 +1,0 @@
-[autoconnect]
-name = none
-addr = none
-
-[default]
-autoconnect = No
-firsttime = 0
-scroll = 0
-fullscreen = Yes
-
-[multimedia]
-no_fullscreen_key_m = Escape
-stop_key = s
-volume_m_key = Down
-play_key = p
-pause_key = p
-forward_key = Right
-fullscreen_key_m = f
-volume_p_key = Up
-backward_key = Left
-
-[games]
-left_key = Left
-d_key = x
-c_key = z
-up_key = Up
-b_key = s
-right_key = Right
-a_key = a
-down_key = Down
-
-[user]
-autoconnect = No
-firsttime = 0
-scroll = 0
-fullscreen = No
-
-[presentation]
-no_fullscreen_key = Escape
-next_key = Next
-fullscreen_key = f5
-previous_key = Prior
-
