@@ -3,7 +3,8 @@ bluemaemo (0.3) unstable; urgency=low
 
 bluemaemo 0.3
 
-	* 
+	* Fixed bug in bluetooth adapter state
+	* Moved configuration files to /etc/bluemaemo
 
 bluemaemo 0.2
 
